add surefire plugin section to pom file, mostly to make travis happy